# mastodon-bot-workdays-cn

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: checker.yml  lint.yml  toot.yml
auto/: .last_sent_at
src/mastodon_bot/: __main__.py  core.py
src/mastodon_bot/holidays/: __init__.py  date.py  get_holidays_data.py  model.py
tests/: test_bot.py  test_holiday_data.py
