[project]
name = "mastodon-bot-workdays-cn"
version = "v0.0.1"
description = ""
authors = [{ name = "fengkx", email = "liangkx8237@gmail.com" }]
dependencies = ["httpx>=0.25.0"]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
dev = ["mypy>=1.6.0"]
