[project]
name = "mastodon-bot-workdays-cn"
version = "v0.0.1"
description = ""
authors = [{ name = "fengkx", email = "liangkx8237@gmail.com" }]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.4.2",
    "python-dateutil>=2.8.2",
    "Mastodon-py>=1.8.1",
    "environs>=9.5.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.6.0",
    "datamodel-code-generator>=0.22.1",
    "pytest>=7.4.2",
    "pytest-asyncio>=0.21.1",
    "types-python-dateutil>=2.8.19.14",
]
